<resources>
    <string name="app_name">Fit Calculator</string>
    <string name="bmi">BMI</string>
    <string name="bmr">BMR</string>
    <string name="whr">WHR</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="gender">Gender</string>
    <string name="calculate">Calculate</string>
    <string name="cm">CM</string>
    <string name="kg">KG</string>
    <string name="age">Age</string>
    <string name="activity">Your Activity: </string>
    <string name="activityChoose"></string>
    <string name="waist">Waist</string>
    <string name="hip">Hip Circumference</string>
    <string name="fat_tissue">Body Fat</string>
    <string name="perfect_weight">Perfect Weight</string>
</resources>
