<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chucknorris.painter.MainActivity">

    <Button
        style="@style/buttonColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bmi"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="bmiClick" />

    <Button
        style="@style/buttonColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bmr"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:onClick="bmrClick"/>

    <Button
        style="@style/buttonColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/whr"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:onClick="whrClick"/>

    <Button
        style="@style/buttonColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fat_tissue"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:onClick="fatClick"/>

    <Button
        style="@style/buttonColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/perfect_weight"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:onClick="weightClick"/>

</RelativeLayout>
